# mca-cuboids

./: .gitignore  Cargo.toml  README.md
assets/huge_lvl/: r.-1.-2.mca  r.-1.-3.mca  r.-1.1.mca  r.-2.0.mca  r.-3.-1.mca  r.-3.-3.mca  r.0.-2.mca  r.0.1.mca  r.1.-1.mca  r.1.-2.mca  r.1.1.mca
assets/simple_lvl/: r.-1.-1.mca  r.-1.0.mca  r.0.-1.mca  r.0.0.mca
assets/test_lvl/: r.-1.-1.mca  r.-1.0.mca  r.0.-1.mca  r.0.0.mca
benches/: lib.rs  merge.rs  read.rs
src/: block_plate.rs  block_sequence.rs  block_stack.rs  convert.rs  lib.rs  merge.rs  read.rs  voxel_plate.rs  voxel_sequence.rs  voxel_stack.rs
