[package]
name = "mca_collisions"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
fastnbt = "2.2.0" # for reading mc world
fastanvil = "0.26.0" # for reading mc world
serde = "1.0.136" # for serializing result
rustc-hash = "1.1.0"
anyhow = "1.0"

[dev-dependencies]
criterion = { version = "0.3.6", features = ["html_reports"] }
pprof = { version = "0.10.0", features = ["criterion", "flamegraph"] }

[[bench]]
name = "lib"
harness = false