[package]
name = "mca-cuboids"
version = "0.2.0"
edition = "2021"
description = "merge blocks from mca files"
repository = "https://github.com/EazyDizzy/mca-cuboids"
keywords = ["mca", "minecraft"]
license = "Apache-2.0/MIT"
include = [
    "src/*.rs",
    "benches",
    "README.md",
]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
fastnbt = "2.2.0" # for reading mc world
fastanvil = "0.26.0" # for reading mc world
serde = "1.0.136" # for serializing result
rustc-hash = "1.1.0"
anyhow = "1.0"

[dev-dependencies]
criterion = { version = "0.3.6", features = ["html_reports"] }
pprof = { version = "0.10.0", features = ["criterion", "flamegraph"] }

[[bench]]
name = "lib"
harness = false